[package]
name = "file_system_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.2"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
